--- a/app/src/main/res/layout/single_tutor_design.xml
+++ b/app/src/main/res/layout/single_tutor_design.xml
@@ -181,7 +181,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tvExperience"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Contact Tutor"
+                android:text="@string/contact_tutor"
                 android:fontFamily="@font/adamina"
                 android:textSize="17sp"
                 android:id="@+id/btnContactTutor"
